syntax-analyzer/tests/test_errors2.c
int main() {
    int list = NIL;
    int elem;
    list = elem :: list;       // error
    return return list;        // error
}